tests/valid/Includes_Valid_1a.wys
include "Includes_Valid_1.wys"

void b(int i):
    print i
