tests/errors/Parser/ParserBadInclude.wys
include "this is a bad include.wys"

void main():
    print "NO GO"
